<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/border_solid"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:contentDescription="@string/back_button" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/btn_share"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_share_black_24dp"
                    android:contentDescription="@string/share" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/TextContent.Title.White"
                        android:layout_marginTop="10dp"
                        android:text="@string/jake_wharton" />

                    <TextView
                        android:id="@+id/tv_company"
                        style="@style/TextContent.Title.White.Small"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/google_inc" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/border_white"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="3dp"
                            android:src="@drawable/follower"
                            android:background="@drawable/border_solid"
                            android:contentDescription="@string/follower" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_follower"
                                style="@style/TextContent.Title"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/_56995" />

                            <TextView
                                style="@style/TextContent.Title.Small"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/followers" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/border_solid"
                            android:padding="3dp"
                            android:src="@drawable/following2"
                            android:contentDescription="@string/following" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_following"
                                style="@style/TextContent.Title"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/_12" />

                            <TextView
                                style="@style/TextContent.Title.Small"
                                android:layout_marginTop="2dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/followings" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_solid"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="6dp"
                            android:background="@drawable/border_white"
                            android:src="@drawable/github"
                            android:contentDescription="@string/username" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextContent.Title.White"
                                android:text="@string/username"/>

                            <TextView
                                android:id="@+id/tv_user_name"
                                style="@style/TextContent.Title.White.Small"
                                android:layout_marginBottom="4dp"
                                android:text="@string/jakewharton"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_solid"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="6dp"
                            android:background="@drawable/border_white"
                            android:src="@drawable/maps"
                            android:contentDescription="@string/location" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextContent.Title.White"
                                android:text="@string/location"/>

                            <TextView
                                android:id="@+id/tv_location"
                                style="@style/TextContent.Title.White.Small"
                                android:layout_marginBottom="4dp"
                                android:text="@string/pittsburgh_pa_usa"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_solid"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="6dp"
                            android:background="@drawable/border_white"
                            android:src="@drawable/git"
                            android:contentDescription="@string/repository" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextContent.Title.White"
                                android:text="@string/repository"/>

                            <TextView
                                android:id="@+id/tv_repository"
                                style="@style/TextContent.Title.White.Small"
                                android:layout_marginBottom="4dp"
                                android:text="@string/_102"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>